<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:paddingStart="10dp"
    tools:context=".HomeFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_head_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                android:text="@string/title"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tv_head_title2"/>

            <TextView
                android:id="@+id/tv_head_title2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                android:text="@string/title2"
                android:textAlignment="center"
                android:textColor="@color/text"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="@id/tv_head_title"
                app:layout_constraintStart_toStartOf="@id/tv_head_title"
                app:layout_constraintTop_toBottomOf="@id/tv_head_title"
                app:layout_constraintBottom_toTopOf="@id/spinner"/>

            <include layout="@layout/spinner_layout"
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_head_title2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/search_bar"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/search_bar"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintTop_toBottomOf="@id/spinner"
                app:layout_constraintStart_toStartOf="@id/spinner"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@color/card_background">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/search_field"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/ic_search"
                    android:drawableTint="@color/text"
                    android:imeOptions="actionSearch"
                    android:singleLine="true"
                    android:hint="Search"
                    android:paddingStart="20dp"
                    android:textColor="@color/text"
                    android:textColorHint="@color/text" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_trending"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/trending"
                android:textAllCaps="true"
                android:textColor="@color/text"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/search_bar"
                app:layout_constraintTop_toBottomOf="@id/search_bar" />

            <TextView
                android:id="@+id/trending_view_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_all"
                android:textSize="15sp"
                android:textColor="@color/text"
                app:layout_constraintTop_toTopOf="@id/tv_trending"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="10dp"/>

            <FrameLayout
                android:id="@+id/layout_trending"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toBottomOf="@id/tv_trending"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_trending"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:clipToPadding="false"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    />

                <ProgressBar
                    android:id="@+id/loading_trending"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"
                    android:layout_gravity="center"/>
            </FrameLayout>


            <TextView
                android:id="@+id/tv_popular"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/popular_this_season"
                android:textAllCaps="true"
                android:textColor="@color/text"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/tv_trending"
                app:layout_constraintTop_toBottomOf="@id/layout_trending" />

            <TextView
                android:id="@+id/season_view_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_all"
                android:textSize="15sp"
                android:textColor="@color/text"
                app:layout_constraintTop_toTopOf="@id/tv_popular"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="10dp"/>

            <FrameLayout
                android:id="@+id/layout_popular"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toBottomOf="@id/tv_popular"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_popular"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp" />

                <ProgressBar
                    android:id="@+id/loading_popular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"
                    android:layout_gravity="center"/>

            </FrameLayout>

            <TextView
                android:id="@+id/tv_popular_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_time_popular"
                android:textAllCaps="true"
                android:textColor="@color/text"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/layout_popular"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/all_time_view_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_all"
                android:textSize="15sp"
                android:textColor="@color/text"
                app:layout_constraintTop_toTopOf="@id/tv_popular_all"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="10dp"/>

            <FrameLayout
                android:id="@+id/all_time_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toBottomOf="@id/tv_popular_all"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_popular_all"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipToPadding="false"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"/>

                <ProgressBar
                    android:id="@+id/all_time_loading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    />
            </FrameLayout>

            <TextView
                android:id="@+id/tv_ranking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ranking"
                android:textAllCaps="true"
                android:textColor="@color/text"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/all_time_layout"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/ranking_view_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_all"
                android:textSize="15sp"
                android:textColor="@color/text"
                app:layout_constraintTop_toTopOf="@id/tv_ranking"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="10dp"/>

            <FrameLayout
                android:id="@+id/ranking_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toBottomOf="@id/tv_ranking"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_ranking"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipToPadding="false"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"/>

                <ProgressBar
                    android:id="@+id/ranking_loading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    />
            </FrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
